--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,5 +23,5 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git fetch origin qa
           git checkout qa
-          git merge dev --no-edit
+          git merge dev --no-edit --allow-unrelated-histories
           git push origin qa
