--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,3 +24,4 @@ jobs:
           git fetch origin qa || git branch qa
           git checkout qa
           git merge dev --no-edit --strategy-option theirs || (echo "Merge conflict detected. Resolving with 'theirs' strategy." && git checkout --theirs . && git add . && git commit -m "Resolved merge conflict" && git push origin qa)
+          git push origin qa
