--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Push to QA
+name: Sync Dev to QA
 
 on:
   push:
@@ -6,60 +6,28 @@ on:
       - dev
 
 jobs:
-  push-to-qa:
+  sync-dev-to-qa:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout the repository
         uses: actions/checkout@v3
 
-      - name: Configure Git
+      - name: Set up Git
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
-      - name: Fetch All Branches
+      - name: Fetch all branches
         run: git fetch --all
 
-      - name: Ensure QA Branch Exists
-        run: |
-          if git ls-remote --exit-code --heads origin qa; then
-            echo "QA branch exists. Checking out."
-            git checkout qa
-            git pull origin qa
-          else
-            echo "QA branch does not exist. Creating it."
-            git checkout -b qa
-            git push origin qa
-          fi
+      - name: Checkout QA branch
+        run: git checkout qa
 
-      - name: Merge dev into qa
-        run: |
-          echo "Merging dev into qa..."
-          git merge origin/dev --no-edit --strategy-option theirs || (
-            echo "Merge conflict detected. Resolving with 'theirs' strategy." &&
-            git checkout --theirs . &&
-            git add . &&
-            git commit -m "Resolved merge conflict"
-          )
+      - name: Merge changes from dev to qa
+        run: git merge origin/dev --no-edit
 
-      - name: Push Changes to QA
-        run: |
-          # Push only if there are changes
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "Changes detected. Pushing to QA branch."
-            git push origin qa
-          else
-            echo "No changes to push. QA branch is already up to date."
-          fi
-
-      - name: Debug Branch State
-        run: |
-          echo "Current branch:"
-          git branch
-          echo "Status of QA branch:"
-          git status
-          echo "Latest commits on dev:"
-          git log origin/dev --oneline -5
-          echo "Latest commits on qa:"
-          git log origin/qa --oneline -5
+      - name: Push changes to QA branch
+        run: git push origin qa
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
