--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Checkout QA branch
         run: git checkout qa
 
-      - name: Merge changes from dev to qa
-        run: git merge origin/dev --allow-unrelated-histories --no-edit
+      - name: Merge changes from dev to qa (allow unrelated histories)
+        run: git merge origin/dev --allow-unrelated-histories -X theirs --no-edit
 
       - name: Push changes to QA branch
         run: git push origin qa
