--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,8 @@ jobs:
           git config user.email "actions@github.com"  # Set the Git user email for commits
 
       # Step 3: Fetch all branches to ensure the latest changes are available
-      - name: Fetch all branches
-        run: git fetch --all
+      - name: Fetch dev and qa
+        run: git fetch origin dev qa
 
       # Step 4: Checkout the 'qa' branch to prepare for the merge
       - name: Checkout QA branch
